# recrep

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/api/: api_mock.rs  api_trait.rs  appcenter_api.rs  mod.rs
src/crashes/: crash_manager.rs  mod.rs
src/json_parsing/: crash_parsing.rs  mod.rs  version_parsing.rs
src/json_parsing/test_fixtures/: api_response.json  crashes.json  latest_version.json  no_crashes.json  two_crashes.json
src/model/: crash.rs  crash_list.rs  error_group_details.rs  mod.rs  report.rs  version.rs  version_list.rs
src/utils/: mod.rs  printing.rs  test_helper.rs  writing.rs
