[package]
name = "recrep"
version = "0.1.4"
authors = ["The Mobile Releases Team of XING SE <mobile_releases@xing.com>"]
edition = "2018"

[dependencies]

# A full featured, fast Command Line Argument Parser for Rust
# https://github.com/clap-rs/clap
clap = { version = "~2.32.0", features = ["yaml"]}

# Strongly typed JSON library for Rust
# https://github.com/serde-rs/json
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"

# An easy and powerful Rust HTTP Client
# https://github.com/seanmonstar/reqwest
reqwest = "~0.9.12"

# Rust templating with Handlebars
# https://github.com/sunng87/handlebars-rust
handlebars = "~1.1.0"
